<resources>
    <string name="app_name">Qpedido</string>
    <string name="app_main_title">SEJA BEM VINDO</string>
    <string name="app_main_description">Faça seu pedido aqui!</string>
    <string name="app_bottom_click">Pressione na tela para começar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_text"/>
    <string name="email_label">Email</string>
    <string name="email_hint">seu@email.com</string>
    <string name="password_label">Senha</string>
    <string name="password_hint">senha</string>
    <string name="fullname_label">Nome completo</string>
    <string name="fullname_hint">Seu Nome</string>
    <string name="ddd_label">DDD</string>
    <string name="ddd_hint">48</string>
    <string name="phone_label">Celular</string>
    <string name="phone_hint">9999–9999</string>
    <string name="password_repeat_label">Repetir senha</string>
    <string name="password_repeat_hint">repetir senha</string>
    <string name="birth_label">Data de nascimento</string>
    <string name="birth_hint">DD/MM/AAAA</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="user_registration">Cadastro de Usuário</string>
    <string name="user_login">Login</string>
    <string name="find_locations">Buscar restaurantes</string>
    <string name="load_table_code">Posicione sobre o código na mesa</string>
    <string name="map">Mapa</string>
    <string name="table_menu">MENU DA MESA</string>
    <string name="select_necessary_option">Selecione a opção que desejar</string>
    <string name="new_order">NOVO PEDIDO</string>
    <string name="my_orders">MEUS PEDIDOS</string>
    <string name="attendance">ATENDIMENTO</string>
    <string name="profile">PERFIL</string>
    <string name="categories">CATEGORIAS</string>
    <string name="select_order_category">Seleciona a categoria do pedido</string>
    <string name="starter">ENTRADAS</string>
    <string name="plates">PRATOS</string>
    <string name="pizza">PIZZAS</string>
    <string name="sandwich">SANDUICHES</string>
    <string name="dessert">SOBREMESAS</string>
    <string name="drink">BEBIDAS</string>
    <string name="order_items">Itens do pedido</string>
    <string name="itens">Itens: R$ 0,00</string>
    <string name="discounts">Descontos: R$ 0,00</string>
    <string name="total_order">Total do pedido: R$ 0,00</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="items">ITENS</string>
    <string name="select_order_items">Escolha os itens do pedido</string>
    <string name="item_name">Nome do Item</string>
    <string name="item_description">Descrição</string>
    <string name="item_times_ordered">0 Pedidos</string>
    <string name="item_price">R$ 0,00</string>
    <string name="attendance_title">Atendimento</string>
    <string name="request_attendance">Solicitar atendimento</string>
    <string name="category">Categoria</string>
    <string name="priority">Prioridade</string>
    <string name="attendance_requested">Atendimento solicitado</string>
    <string name="attendance_requested_successfully">Atendimento solicitado com sucesso!</string>
    <string name="attendance_requested_incoming">Um atendente já está a caminho da sua mesa.</string>
    <string name="profile_title">Perfil</string>
    <string name="password_not_equals">A senha deve ser igual nos dois campos!</string>
    <string name="empty_fullname">O campo de nome completo é obrigatório!</string>
    <string name="empty_email">O campo de email é obrigatório!</string>
    <string name="empty_ddd">O campo de DDD é obrigatório!</string>
    <string name="empty_phone">O campo de número é obrigatório!</string>
    <string name="empty_birthDate">O campo de data de nascimento é obrigatório!</string>
    <string name="empty_password">O campo de senha é obrigatório!</string>
    <string name="empty_repeat_password">O campo de repetir senha é obrigatório!</string>
    <string name="registration_error">Erro ao realizar registro, tente novamente mais tarde!</string>
    <string name="account_data">Dados da conta</string>
    <string name="account_information">Informações da conta</string>
    <string name="account_creation_data">Data de criação:</string>
    <string name="account_orders">Pedidos realizados:</string>
    <string name="account_attendance_requested">Atendimentos solicitados:</string>
    <string name="account_checked">Conta verificada:</string>
    <string name="save">SALVAR</string>
    <string name="error_add_item_cart">Erro ao adicionar item ao carrinho, tente novamente mais tarde!</string>
    <string name="error_clean_cart">Erro ao limpar carrinho!</string>
    <string name="error_load_cart_resume">Erro ao carregar o carrinho!</string>
    <string name="payment">Pagamento</string>
    <string name="do_paymento">Realizar pagamento</string>
    <string name="payment_type">Tipo de pagamento</string>
    <string name="payment_button">Realizar pagamento</string>
    <string name="card_informations">Informações do cartão</string>
    <string name="card_number">Numero</string>
    <string name="card_number_hint">XXXX-XXXX-XXXX-XXXX</string>
    <string name="card_ccv">CCV</string>
    <string name="card_ccv_hint">XXX</string>
    <string name="card_date">Data de vencimento</string>
    <string name="payment_fail">Falha ao realizar pagamento!</string>
    <string name="order">Pedido</string>
    <string name="status">Status</string>
    <string name="status_change_error">Falha ao alterar status do pedido!</string>
    <string name="error_load_order_items">Falha ao ler itens do pedido!</string>
    <string name="my_orders_title">Meus pedidos</string>
    <string name="order_complete">Concluido</string>
    <string name="more_information">Mais informações ></string>


    <string name="login_fragment_title">Informações de acesso</string>
    <string name="register_fragment_title">Informações pessoais</string>
</resources>