<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ProfileActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/arrow_left" android:id="@+id/imageView2"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" android:layout_weight="0" android:minWidth="30dp"
                android:onClick="onClickReturn" android:contentDescription="@string/default_text"/>
        <TextView
                android:text="@string/profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewTitle" android:layout_weight="1"
                android:textSize="20sp" android:fontFamily="@font/roboto_bold"/>
    </LinearLayout>
    <TextView
            android:text="@string/account_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_weight="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginTop="30dp"
            android:textSize="20sp" android:fontFamily="@font/roboto_bold" android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="414dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout3" android:paddingLeft="30sp" android:paddingRight="30sp">
        <TextView
                android:text="@string/account_creation_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView18"
                android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/account_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView19"
                android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/account_attendance_requested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView20"
                android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/account_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView21"
                android:fontFamily="@font/roboto_bold"/>
    </LinearLayout>
    <TextView
            android:text="@string/account_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            android:layout_marginStart="18dp" android:layout_marginEnd="18dp" android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="408dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView22" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout4"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin3" android:paddingLeft="30sp"
            android:paddingRight="30sp">
        <TextView
                android:text="@string/fullname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewFullName4"
                android:labelFor="@id/editTextFullName" android:layout_marginTop="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextFullNameProfile" android:hint="@string/fullname_hint"
                android:minHeight="48dp"/>
        <TextView
                android:text="@string/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewEmail3"
                android:labelFor="@id/editTextEmail" android:layout_marginTop="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmailProfile" android:hint="@string/email_hint"
                android:minHeight="48dp" android:textColorLink="@color/blue_1"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="6">
                <TextView
                        android:text="@string/ddd_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textViewDDD"
                        android:labelFor="@id/editTextDDD"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextDDDProfile" android:hint="@string/ddd_hint" android:minHeight="48dp"
                        android:maxLength="2"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textViewPhone"
                        android:text="@string/phone_label" android:labelFor="@id/editTextPhone"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextPhoneProfile" android:hint="@string/phone_hint"
                        android:minHeight="48dp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/birth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewBirth3"
                android:labelFor="@id/editTextBirth" android:layout_marginTop="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextBirthProfile" android:hint="@string/birth_hint" android:minHeight="48dp"
                android:maxLength="10"
        />
        <TextView
                android:text="@string/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewPassword3"
                android:labelFor="@id/editTextPassword" android:layout_marginTop="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPasswordProfile" android:hint="@string/password_hint"
                android:minHeight="48dp"/>
    </LinearLayout>
    <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLogin3"
            android:backgroundTint="@color/blue_1" android:fontFamily="@font/roboto_bold"
            android:minWidth="328dp" android:maxWidth="400dp"
            android:height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="18dp" android:layout_marginEnd="18dp" android:onClick="saveChanges"/>
</androidx.constraintlayout.widget.ConstraintLayout>