<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.CreditCardFragment">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/card_informations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView8"
                android:fontFamily="@font/roboto_bold" android:textSize="20sp"/>
        <TextView
                android:text="@string/fullname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewCardName"
                android:labelFor="@id/editTextEmail"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextCardName" android:hint="@string/fullname_hint"
                android:minHeight="48dp" android:textColorLink="@color/blue_1"
        />
        <TextView
                android:text="@string/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewCardNumber"
                android:labelFor="@id/editTextEmail"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextCardNumber" android:hint="@string/card_number_hint"
                android:minHeight="48dp" android:textColorLink="@color/blue_1"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="5">
                <TextView
                        android:text="@string/card_ccv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textViewCardNumber2"
                        android:labelFor="@id/editTextEmail"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editTextCardNumber2" android:hint="@string/card_ccv_hint"
                        android:minHeight="48dp" android:textColorLink="@color/blue_1"
                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:text="@string/card_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textViewCardNumber2"
                        android:labelFor="@id/editTextEmail"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editTextCardNumber2" android:hint="@string/birth_hint"
                        android:minHeight="48dp" android:textColorLink="@color/blue_1"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>