<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.OrderFragment" android:onClick="onClickMoreOrderInfo">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/radius_grey"
                android:layout_margin="10sp">
            <TextView
                    android:text="@string/order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewOrdersOrderId"
                    android:fontFamily="@font/roboto_bold" android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp" android:layout_marginTop="10sp"/>
            <TextView
                    android:text="@string/order_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewOrdersStatus"
                    android:fontFamily="@font/roboto_bold" android:textColor="@color/green_1"
                    android:layout_marginLeft="10sp" android:layout_marginRight="10sp"/>
            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="115dp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp"
                    android:layout_marginTop="10sp" android:layout_marginBottom="10sp">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical" android:id="@+id/linearLayoutOrdersItems"/>
            </ScrollView>
            <TextView
                    android:text="@string/itens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewOrdersItemsPrice"
                    android:fontFamily="@font/roboto_bold" android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"/>
            <TextView
                    android:text="@string/discounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewOrdersDiscount"
                    android:fontFamily="@font/roboto_bold" android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginBottom="10sp">
                <TextView
                        android:text="@string/total_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textViewOrdersTotalPrice"
                        android:layout_weight="10"
                        android:fontFamily="@font/roboto_bold" android:textSize="16dp"
                        android:layout_marginLeft="10sp" android:layout_marginRight="10sp"/>
                <TextView
                        android:text="@string/more_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView28" android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold" android:textColor="@color/blue_2"
                        android:layout_marginRight="10sp" android:onClick="onClickMoreOrderInfo"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>