<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.OrderConfirmationActivity" android:onClick="onClickReturn">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/arrow_left" android:id="@+id/imageView2"
                tools:ignore="ImageContrastCheck" android:minWidth="30dp"
                android:contentDescription="@string/default_text"
        />
        <TextView
                android:text="@string/order_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:textSize="20sp" android:fontFamily="@font/roboto_bold"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="38dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginTop="10sp" android:id="@+id/view"/>
    <ScrollView
            android:layout_width="409dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/view">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="10sp"/>
    </ScrollView>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout2"
            android:layoutDirection="locale" android:paddingLeft="10sp" android:paddingRight="10sp">
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                tools:layout_editor_absoluteX="38dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_marginTop="10sp" android:id="@+id/view2"/>
        <TextView
                android:text="@string/itens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp" android:layout_marginTop="10sp" android:paddingLeft="10sp"
                android:paddingRight="10sp"/>
        <TextView
                android:text="@string/discounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView8"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp" android:paddingLeft="10sp" android:paddingRight="10sp"/>
        <TextView
                android:text="@string/total_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:fontFamily="@font/roboto_bold"
                android:textSize="25sp" android:textStyle="bold" android:paddingLeft="10sp"
                android:paddingRight="10sp"/>
        <Button
                android:text="@string/confirm_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonRegister2"
                android:backgroundTint="@color/green_1" android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false" android:onClick="onClickSwitchRegister" android:height="60dp"
                android:layout_marginTop="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>