<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AttendanceRequestedActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutTab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/arrow_left" android:id="@+id/imageView2"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" android:layout_weight="0" android:minWidth="30dp"
                android:onClick="onClickReturn" android:contentDescription="@string/default_text"/>
        <TextView
                android:text="@string/attendance_requested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewTitle" android:layout_weight="1"
                android:textSize="20sp" android:fontFamily="@font/roboto_bold"/>
    </LinearLayout>
    <ImageView
            android:layout_width="169dp"
            android:layout_height="187dp" app:srcCompat="@drawable/checked" android:id="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="408dp"
            android:layout_height="173dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/attendance_requested_successfully"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView14"
                android:textAlignment="center" android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold" android:textSize="20sp" android:textColor="@color/green_1"/>
        <TextView
                android:text="@string/attendance_requested_incoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView15"
                android:textAlignment="center" android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>